- quedo la bonus

--- a/activity.ipynb
+++ b/activity.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "# Trabajo 1 Redes Neuronales \n",
-    "#### Leonardo Rodríguez, Hernán Gallardo, Juán Pablo Pezo\n",
+    "#### Leonardo Rodríguez, Hernán Gallardo, Juan Pablo Pezo\n",
     "#### Domingo 30 de junio, 2024 Valdivia"
    ]
   },
@@ -1036,8 +1036,18 @@
     "#### ¿Que significaría el aumento de FN o FP en este caso? \n",
     "Si aumentan los FN (False negative) se perderia la confianza en el modelo, puesto que podría llevar a ignorar casos criticos de pacientes. Si FP aumenta puede llevar a afectar a los pacientes o al hospital con Ansiedad, estres o costos economicos innecesarios.\n",
     "#### Investigue sobre alguna arquitectura de red neuronal distinta a la utilizada en este trabajo, describala y explique en que casos sería útil.\n",
-    "##### **_Respuesta Pendiente_**\n",
+    "Deep Convolutional Networks (DCN) son una arquitectura de redes neuronales que se bastante utilizada para el trabajo de reconocimiento de imagenes, su estructura inspirada en el procesamiento visual biológico. Aunque son extremadamente efectivas, requieren grandes cantidades de datos y recursos computacionales. Posee una arquitectura de capas convolucionales intercaladas con capas de pooling.\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "<img src=\"dcn.jpg\"  width=\"1000\" height=\"600\">"
    ]
   },
   {
@@ -1067,7 +1077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
