--- a/activity.ipynb
+++ b/activity.ipynb
@@ -1047,7 +1047,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "<img src=\"dcn.jpg\"  width=\"1000\" height=\"600\">"
+    "<img src=\"dcn.png\"  width=\"1000\" height=\"600\">"
    ]
   },
   {
