Avance final -leoR

--- a/activity.ipynb
+++ b/activity.ipynb
@@ -1042,12 +1042,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "<img src=\"dcn.png\"  width=\"1000\" height=\"600\">"
+    "<img src=\"dcn.png\"  width=\"800\" height=\"500\">"
    ]
   },
   {
@@ -1057,7 +1055,7 @@
     "### Pregunta Bonus\n",
     "#### ¿Cúal es la principal limitación de las redes neuronales comparado al cerebro humano?\n",
     "\n",
-    "##### **_Respuesta Pendiente_**"
+    "La principal limitación de las redes neuronales cuando las comparamos con el cerebro humano es que estan estan por debajo de los cerebros en la capacidad de generalización, como también cierta flexibilidad adaptativa. Esto se puede ejemplificar en una situación donde la red neuronal necesitaria grandes cantidades de datos etiquetados y varios entrenamientos para aprender y adaptarse a nuevas tareas, mientras que el cerebro humano necesita de pocos ejemplos para adaptarse y generalizar. Además el cerebro es más eficiente en terminos de consumo de energia, puede comprender más profundamente de cualquier contexto o significado, lo que permite mayor creatividad y pensamiento complejo."
    ]
   }
  ],
@@ -1077,7 +1075,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
